Fix custom sound categories not working at all. Add GameOptionsMixin which actually allows custom sound volume options to be fetched and used for sound